# shyen-capital

./: .env  Cargo.toml
cpp/: CMakeLists.txt
cpp/include/: env_loader.hpp  indicator_engine.hpp  market_data.hpp  options_selector.hpp  tradingview_datafeed.hpp  trend_predictor.hpp
cpp/src/: env_loader.cpp  indicator_engine.cpp  main.cpp  market_data.cpp  tradingview_datafeed.cpp  trend_predictor.cpp
cpp/tests/: test_indicator_engine.cpp
crates/sc_core/src/: lib.rs
crates/sc_data_ingestors/: Cargo.toml
crates/sc_data_ingestors/src/: social_media.rs
crates/sc_nlp/src/: lib.rs  tokenizer.rs
old/crates/sc_core/: Cargo.toml
old/crates/sc_data_ingestors/src/: lib.rs  market_data.rs  news_scrapper.rs  social_media.rs
old/crates/sc_nlp/: Cargo.toml
old/crates/sc_nlp/src/: lib.rs
old/crates/sc_nlp/src/model/: embedding.rs  mod.rs
old/shyen_capital_app/: Cargo.toml
shyen_capital_app/src/: main.rs
